syntax = "proto3";

option go_package = "/api";

package benchmonitor;

message Empty {}

message CollectionConf {
	string duration = 1;
	string collectionId = 2;
}

message CollectionResultsConf {
	string collectionId = 1;
}

message File {
	bytes data = 1;
}

service KubebenchMonitor {
	rpc GetSysInfo(Empty) returns (stream File) {}
	rpc StartCollection(CollectionConf) returns (Empty) {}
	rpc GetCollectionResults(CollectionResultsConf) returns (stream File) {}
}
